--- a/package.json
+++ b/package.json
@@ -3,6 +3,9 @@
     "koa": "^0.14.0"
   },
   "devDependencies": {
-    "gulp": "^3.8.10"
+    "co-supertest": "0.0.7",
+    "gulp": "^3.8.10",
+    "mocha": "^2.1.0",
+    "supertest": "^0.15.0"
   }
 }
