--- a/package.json
+++ b/package.json
@@ -7,6 +7,8 @@
     "gulp": "^3.8.10",
     "gulp-mocha": "^2.0.0",
     "gulp-mocha-co": "^0.4.1-co.3",
+    "koa-mount": "^1.3.0",
+    "koa-router": "^3.8.0",
     "mocha": "^2.1.0",
     "supertest": "^0.15.0"
   }
