--- a/package.json
+++ b/package.json
@@ -9,6 +9,7 @@
     "gulp-mocha-co": "^0.4.1-co.3",
     "koa-logger": "^1.2.2",
     "koa-mount": "^1.3.0",
+    "koa-response-time": "^1.0.2",
     "koa-router": "^3.8.0",
     "mocha": "^2.1.0",
     "supertest": "^0.15.0"
