--- a/package.json
+++ b/package.json
@@ -13,5 +13,6 @@
     "koa-router": "^3.8.0",
     "mocha": "^2.1.0",
     "supertest": "^0.15.0"
-  }
+  },
+  "engines" : { "node" : "0.11.14" }
 }
