--- a/package.json
+++ b/package.json
@@ -1,16 +1,16 @@
 {
   "dependencies": {
-    "koa": "^0.14.0"
+    "koa": "^0.14.0",
+    "koa-logger": "^1.2.2",
+    "koa-mount": "^1.3.0",
+    "koa-response-time": "^1.0.2",
+    "koa-router": "^3.8.0"
   },
   "devDependencies": {
     "co-supertest": "0.0.7",
     "gulp": "^3.8.10",
     "gulp-mocha": "^2.0.0",
     "gulp-mocha-co": "^0.4.1-co.3",
-    "koa-logger": "^1.2.2",
-    "koa-mount": "^1.3.0",
-    "koa-response-time": "^1.0.2",
-    "koa-router": "^3.8.0",
     "mocha": "^2.1.0",
     "supertest": "^0.15.0"
   },
