--- a/package.json
+++ b/package.json
@@ -2,6 +2,7 @@
   "dependencies": {
     "koa": "^0.14.0",
     "koa-logger": "^1.2.2",
+    "koa-mongo": "^0.2.0",
     "koa-mount": "^1.3.0",
     "koa-response-time": "^1.0.2",
     "koa-router": "^3.8.0"
@@ -14,5 +15,7 @@
     "mocha": "^2.1.0",
     "supertest": "^0.15.0"
   },
-  "engines" : { "node" : "0.11.14" }
+  "engines": {
+    "node": "0.11.14"
+  }
 }
