--- a/package.json
+++ b/package.json
@@ -10,12 +10,17 @@
   "devDependencies": {
     "co-supertest": "0.0.7",
     "gulp": "^3.8.10",
+    "gulp-exit": "0.0.2",
     "gulp-mocha": "^2.0.0",
     "gulp-mocha-co": "^0.4.1-co.3",
+    "gulp-nodemon": "^1.0.4",
     "mocha": "^2.1.0",
     "supertest": "^0.15.0"
   },
   "engines": {
     "node": "0.11.14"
+  },
+  "scripts": {
+    "test": "node --harmony `which gulp` test-once"
   }
 }
