--- a/package.json
+++ b/package.json
@@ -1,11 +1,13 @@
 {
   "dependencies": {
+    "co-monk": "^1.0.0",
     "koa": "^0.14.0",
     "koa-logger": "^1.2.2",
     "koa-mongo": "^0.2.0",
     "koa-mount": "^1.3.0",
     "koa-response-time": "^1.0.2",
-    "koa-router": "^3.8.0"
+    "koa-router": "^3.8.0",
+    "monk": "^0.9.1"
   },
   "devDependencies": {
     "co-supertest": "0.0.7",
