--- a/package.json
+++ b/package.json
@@ -7,15 +7,18 @@
     "koa-mount": "^1.3.0",
     "koa-response-time": "^1.0.2",
     "koa-router": "^3.8.0",
+    "mongodb": "^2.0.12",
     "monk": "^0.9.1"
   },
   "devDependencies": {
     "co-supertest": "0.0.7",
+    "faker": "^2.1.2",
     "gulp": "^3.8.10",
     "gulp-exit": "0.0.2",
     "gulp-mocha": "^2.0.0",
     "gulp-mocha-co": "^0.4.1-co.3",
     "gulp-nodemon": "^1.0.4",
+    "jake": "^8.0.10",
     "mocha": "^2.1.0",
     "supertest": "^0.15.0"
   },
